# 2DGameEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
game/: Game.cpp  Game.h  texture_types.h
include/SDL2/: SDL_ttf.h
include/assets/player/: Player.cpp  Player.h
include/ecs/: Component.cpp  ControllerComponent.cpp  Entity.cpp  PhysicsComponent.cpp  PhysicsComponent.h  RendererComponent.cpp  RendererComponent.h
include/engine/: GameEngine.cpp  GameEngine.h
include/frame/: FrameManager.cpp  FrameManager.h
include/game/: Game.cpp  Game.h
include/input/: InputManager.cpp  InputManager.h
include/logger/: UserLog.cpp  user_log_types.h
include/texture/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  texture_types.h
include/timer/: Timer.cpp  Timer.h
src/2DOrthogonal/: orthogonal_2D_includes.h
src/2DOrthogonal/components/input/: Orthogonal2DInput.cpp  Orthogonal2DInput.h
src/2DOrthogonal/components/input/player/: Orthogonal2DInputPlayer.cpp  Orthogonal2DInputPlayer.h
src/2DOrthogonal/components/physics/: Orthogonal2DPhysics.cpp  Orthogonal2DPhysics.h
src/2DOrthogonal/components/renderer/: Orthogonal2DRenderer.cpp  Orthogonal2DRenderer.h
src/2DOrthogonal/components/transform/: Orthogonal2DTransform.cpp  Orthogonal2DTransform.h
src/2DPlatformer/: platform_2D_includes.h
src/2DPlatformer/components/: Platform2DCollider.cpp  Platform2DCollider.h  Platform2DControllerComponent.cpp  Platform2DControllerComponent.h  Platform2DDynamicCollider.cpp  Platform2DDynamicCollider.h  Platform2DInput.cpp  Platform2DInput.h  Platform2DPhysics.cpp  Platform2DPhysics.h  Platform2DPhysicsComponent.cpp  Platform2DPhysicsComponent.h  Platform2DRenderer.cpp  Platform2DRenderer.h  Platform2DRendererComponent.cpp  Platform2DRendererComponent.h  Platform2DTransform.cpp  Platform2DTransform.h  Platform2DTransformComponent.cpp  Platform2DTransformComponent.h
src/collision/: CollisionManager.cpp  CollisionManager.h
src/config/: app_config.h  game_config.cpp  game_config.h
src/ecs/: ColliderComponent.cpp  ColliderComponent.h  Component.h  ComponentManager.cpp  ControllerComponent.cpp  ControllerComponent.h  Entity.cpp  Entity.h  PhysicsComponent.cpp  PhysicsComponent.h  RendererComponent.cpp  RendererComponent.h  TransformComponent.cpp  TransformComponent.h
src/ecs/components/: Collider.cpp  Collider.h  ComponentManager.cpp  ComponentManager.h  Input.cpp  Input.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h  components.h
src/ecs/components/base/: Component.cpp  Component.h  ComponentManager.h
src/ecs/entity/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/engine/: GameEngine.cpp  GameEngine.h
src/font/: Font.cpp  Font.h  FontManager.cpp  FontManager.h  SDL_FontCache.c  SDL_FontCache.h  font_types.h
src/frame/: FrameManager.cpp  FrameManager.h
src/input/: InputManager.cpp
src/logger/: UserLog.h  user_log_types.h
src/manager/: manager.h
src/texture/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/timer/: Timer.cpp  Timer.h
src/vector/: Vector2D.cpp  Vector2D.h
